--- a/Task2.html
+++ b/Task2.html
@@ -18,7 +18,7 @@
     to use the revenues generated from that land for the celebration of major festivals in the temple.</p>
     <br>
     <a href="https://github.com/KolluruBalaji123/Sample-Git-Repo.git">Github Repo</a><br>
-    <img src="Balaji2.jpg"alt="Balajipicture">
+    <img src="./Images/Balaji2.jpg"width="20%" height ="20%"alt="Balajipicture">
        
 </body>
 </html>
