--- a/Task3.html
+++ b/Task3.html
@@ -7,7 +7,7 @@
     <title>Task3</title>
 </head>
 <body>
-    <table border="1">
+    <table border="2">
         <tr>
             <th>
                 palce i was visit
@@ -18,7 +18,7 @@
         </tr>
      <tr>
         <td>
-            <img src="goa.jpg" width="20%" height="20%" alt="goa">
+            <img src="./Images/goa.jpg" width="50%" height="100%" alt="goa">
         </td>
         <td>
             its nice
@@ -26,15 +26,12 @@
      </tr>
      <tr>
         <td>
-            <img src="vizag.jpg" width="20%" height="20%" alt="vizag">
+            <img src="./Images/vizag.jpg" width="50%" height="100%" alt="vizag">
         </td>
         <td>
             not nice
         </td>
      </tr>
-
-
-      
     </table>
     
 </body>
